--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>99 Lines of Code In The File</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <link rel="stylesheet" type= "text/css" href="css/styles.css">
-    <script src="app.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css" />
+    
 </head>
 
 <body>
@@ -20,7 +19,6 @@
             <p>Test4</p>
             <p>Test5</p>
     </div>
-
-
+    <script src="javascript/app.js"></script>
 </body>
 </html>
